-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11, 15
-
Component/s: hotspot
-
b15
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8243233 | 11.0.8-oracle | Vladimir Kozlov | P3 | Resolved | Fixed | b04 |
There are several constants, fields used by Graal that are not exported in jvmci/vmStructs_jvmci.cpp. On the Graal end, these entries are optional but will disable various optimization, and hence lead to performance degradation.
- backported by
-
JDK-8243233 [JVMCI] Export missing vmStructs entries used by JVMCI compilers
-
- Resolved
-