8240831: [JVMCI] Export missing vmStructs entries used by JVMCI compilers

Reviewed-by: kvn, thartmann